Third Commit ~70% of work

--- a/assets/sass/_content.sass
+++ b/assets/sass/_content.sass
@@ -331,3 +331,200 @@ $margintop-testimonials: 65px
   background-repeat: no-repeat
   background-position: center
   background-size: cover
+  h2
+    color: $white_color
+    font-size: 48px
+    line-height: 62.45px
+    padding-top: 13px
+  .all-purchase
+    margin-top: 130px
+    .btn
+      width: 160px
+      height: 42px
+      background-color: $white_color
+      opacity: 0.15
+      font-size: 15px
+      line-height: 28px
+      border-radius: 20px
+      margin-top: -152px
+      transition: 0.2s
+      &:hover
+        opacity: 0.2
+      &:active
+        opacity: 0.3
+    .enterprise-purchase
+      img
+        margin-top: -0.8px
+  .underbutton-text-pricing
+    font-size: 14px
+    font-family: $font-sourcesanspro
+    color: #a291a5
+    line-height: 21px
+    padding-top: 100px
+
+@media (min-width: 470px)and(max-width: 480px)
+  .pricing
+    height: 2550px
+    h2
+      padding-top: 190px
+    .all-purchase
+      flex-wrap: wrap
+    .underbutton-text-pricing
+      padding-top: 30px
+
+@media (min-width: 480px)and(max-width: 670px)
+  .pricing
+    height: 2550px
+    h2
+      padding-top: 190px
+    .all-purchase
+      flex-wrap: wrap
+    .underbutton-text-pricing
+      padding-top: 30px
+    .btn
+      position: relative
+      top: 243px
+      margin-left: -213px
+    div
+      margin-top: 25px
+
+@media (min-width: 672px)and(max-width: 766px)
+  .pricing
+    height: 2550px
+    h2
+      padding-top: 80px
+    .all-purchase
+      flex-wrap: wrap
+    .underbutton-text-pricing
+      padding-top: 30px
+    .btn
+      position: relative
+      top: 243px
+      margin-left: -213px
+    div
+      margin-top: 25px
+      margin-left: 45px
+
+@media (min-width: 768px)and(max-width: 1198px)
+  .pricing
+    height: 1350px
+    h2
+      padding-top: 80px
+    .all-purchase
+
+      flex-wrap: wrap
+      margin-top: 65px
+    .underbutton-text-pricing
+      padding-top: 30px
+    .btn
+      position: relative
+      top: 243px
+      margin-left: -213px
+    div
+      margin-top: 25px
+      margin-left: 15px
+
+.subscription
+  height: 134px
+  background-color: #f4f4f4
+  h3
+    color: #635c73
+    font-size: 30px
+    line-height: 60px
+    display: inline-block
+    padding-top: 37px
+  form
+    margin-left: 165px
+    margin-top: 37px
+    input
+      width: 335px
+      height: 42px
+      border-radius: 20px
+      border: 1px solid $white_color
+      color: #c8cbcf
+      font-size: 14px
+      padding-left: 25px
+  .btn
+    width: 140px
+    height: 42px
+    background-color: $purplecolor
+    border-radius: 20px
+    color: $white_color
+    font-size: 13px
+    line-height: 17px
+    margin-left: 10px
+    &:active
+      background-color: #9992a8
+@media (min-width: 470px)and(max-width: 542px)
+  .subscription
+    height: 234px
+    h3
+      line-height: 30px
+      text-align: center
+      position: relative
+      font-size: 30px
+      top: -50px
+      left: 142px
+    form
+      margin-top: 160px
+      margin-left: -50px
+    input
+      width: 315px
+      height: 37px
+      margin-left: 5px
+    .btn
+      width: 100px
+      height: 32px
+      margin-left: -105px
+      margin-top: -67px
+
+@media (min-width: 543px)and(max-width: 767px)
+  .subscription
+    height: 234px
+    h3
+      line-height: 30px
+      text-align: center
+      position: relative
+      font-size: 30px
+      top: -50px
+      left: 127px
+    form
+      margin-top: 160px
+      margin-left: -100px
+      .btn
+        margin-left: -165px
+        margin-top: -67px
+
+@media (min-width: 768px)and(max-width: 995px)
+  .subscription
+    height: 234px
+    h3
+      line-height: 30px
+      text-align: center
+      position: relative
+      font-size: 30px
+      top: -50px
+      left: 127px
+    form
+      margin-top: 120px
+      margin-left: -325px
+      .btn
+        margin-left: 5px
+        margin-top: -2px
+
+@media (min-width: 996px)and(max-width: 1199px)
+  .subscription
+    height: 204px
+    h3
+      line-height: 30px
+      text-align: center
+      position: relative
+      font-size: 30px
+      top: -50px
+      left: 127px
+    form
+      margin-top: 100px
+      margin-left: -325px
+      .btn
+        margin-left: 5px
+        margin-top: -2px
