4-th Commit ~70% of work

--- a/assets/sass/_content.sass
+++ b/assets/sass/_content.sass
@@ -347,6 +347,7 @@ $margintop-testimonials: 65px
       line-height: 28px
       border-radius: 20px
       margin-top: -152px
+      text-transform: uppercase
       transition: 0.2s
       &:hover
         opacity: 0.2
